Started the Navbar tweaks for Bootstrap.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@
   <title>About | Nan Loyd-Leffingwell</title>
   <meta charset="UTF-8">
   <meta name="author" content="Nan Loyd-Leffingwell" />
-  <meta name="description" content="A responsive portfolio site for Nan Loyd-Leffingwell" />
+  <meta name="description" content="A Bootstrap portfolio site for Nan Loyd-Leffingwell" />
   <meta name="classification" content="portfolio" />
   <meta name="copyright" content="&copy; 2017 Nan Loyd-Leffingwell" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
 
-  <header id="masthead">
-    <div class="container">
-      <a href="index.html" id="logo">Nan Loyd-Leffingwell</a>
-      <nav>
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    </div>
+  <header>
+    <nav class="navbar navbar-default">
+     <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="index.html" id="logo">Nan Loyd-Leffingwell</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <div id="main-container" class="container">
