Started Grid for contents of index.

--- a/index.html
+++ b/index.html
@@ -32,28 +32,31 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>About Me</h1>
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-12 col-sx-12">
+        <section class="main-section">
+          <h1>About Me</h1>
 
-      <img src="assets/images/nancydll.jpg" class="auth-image" alt="An image of Nan Loyd-Leffingwell is shown.">
+          <img src="assets/images/nancydll.jpg" class="auth-image" alt="An image of Nan Loyd-Leffingwell is shown.">
 
-      <p>After 12 years in advertising I decided that it was time to try something new. Six years ago I started a job at a software company with NO previous experience in software and the learning curve was steep, difficult, and frustrating but also incredibly rewarding.</p>
-      <br>
-      <p>I managed a small semi-technical team responsible for importing client data into databases using the custom built tools that the Development team created for us. I also managed the Tech Writing department. I realized that I wanted to jump deeper into the technology and decided to attend the KU Coding Bootcamp.</p>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+          <p>After 12 years in advertising I decided that it was time to try something new. Six years ago I started a job at a software company with NO previous experience in software and the learning curve was steep, difficult, and frustrating but also incredibly rewarding.</p>
+          <br>
+          <p>I managed a small semi-technical team responsible for importing client data into databases using the custom built tools that the Development team created for us. I also managed the Tech Writing department. I realized that I wanted to jump deeper into the technology and decided to attend the KU Coding Bootcamp.</p>
+        </section>
       </div>
-    </section>
-  </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-sx-12">
+          <section class="sidebar">
+            <div id="connect">
+              <h2>Connect with Me</h2>
 
+              <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+              <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+              <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+            </div>
+          </section>
+        </div>
+    </div>
+  </div>
   <footer>
     <div class="container">
       &#169; Cooyright 2017 Nan Loyd-Leffingwell
