--- a/contact.html
+++ b/contact.html
@@ -32,38 +32,41 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Contact</h1>
-
-      <form id="contact-form">
-        <ul>
-          <li>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-          </li>
-          <li>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-          </li>
-          <li>
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required="required"></textarea>
-          </li>
-        </ul>
-        <input type="submit">
-      </form>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-12 col-sx-12">
+        <section class="main-section">
+          <h1>Contact</h1>
+          <form id="contact-form">
+            <ul>
+              <li>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+              </li>
+              <li>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+              </li>
+              <li>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required="required"></textarea>
+              </li>
+            </ul>
+            <input type="submit">
+          </form>
+        </section>
       </div>
-    </section>
+      <div class="col-lg-4 col-md-4 col-sm-12 col-sx-12">
+        <section class="sidebar">
+          <div id="connect">
+            <h2>Connect with Me</h2>
+
+            <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+            <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+            <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 
   <footer>
