--- a/portfolio.html
+++ b/portfolio.html
@@ -32,48 +32,50 @@
   </header>
 
   <div id="main-container" class="container">
-    <section class="main-section">
-      <h1>Portfolio</h1>
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-12 col-sx-12">
+        <section class="main-section">
+          <h1>Portfolio</h1>
 
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+          <div class="work">
+            <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+            <h3>Hangman</h3>
+          </div>
 
-        <h3>Hangman</h3>
+          <div class="work">
+            <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+            <h3>RPG Game</h3>
+          </div>
+
+          <div class="work">
+            <img class="img-responsive" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+            <h3>Trivia Game</h3>
+          </div>
+
+          <div class="work">
+            <img class="img-responsive" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+            <h3>Rutgers Info Widget</h3>
+          </div>
+
+          <div class="work">
+            <img class="img-responsive" src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+            <h3>Rock Paper Scissors</h3>
+          </div>
+        </section>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+      <div class="col-lg-4 col-md-4 col-sm-12 col-sx-12">
+        <section class="sidebar">
+          <div id="connect">
+            <h2>Connect with Me</h2>
 
-        <h3>RPG Game</h3>
+            <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+            <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+            <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+          </div>
+        </section>
       </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
-      </div>
-      <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-        <h3>Rock Paper Scissors</h3>
-      </div>
-
-    </section>
-
-    <section class="sidebar">
-      <div id="connect">
-        <h2>Connect with Me</h2>
-
-        <a href="https://github.com/NancyDLL" target="_blank"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/in/nan-loyd-leffingwell-b9967917" target="_blank"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/users/8088558/nancydll?tab=profile"  target="_blank"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-      </div>
-    </section>
+    </div>
   </div>
-
   <footer>
     <div class="container">
       &#169; Cooyright 2017 Nan Loyd-Leffingwell
