Sticky footer working.

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,19 +32,23 @@
   </header>
 
   <div id="main-container" class="container">
-    <div class="row">
+    <div class="row-fluid">
       <div class="col-lg-8 col-md-8 col-sm-12 col-sx-12">
         <section class="main-section">
           <h1>Portfolio</h1>
-
-          <div class="work">
-            <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-            <h3>Hangman</h3>
+          
+          <div class="span6">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+              <h3>Hangman</h3>
+            </div>
           </div>
 
-          <div class="work">
-            <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-            <h3>RPG Game</h3>
+          <div class="span6">
+            <div class="work">
+              <img class="img-responsive" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+              <h3>RPG Game</h3>
+            </div>
           </div>
 
           <div class="work">
@@ -82,5 +86,4 @@
     </div>
   </footer>
 </body>
-
 </html>
