--- a/contact.html
+++ b/contact.html
@@ -36,24 +36,29 @@
       <div class="col-lg-8 col-md-8 col-sm-12 col-sx-12">
         <section class="main-section">
           <h1>Contact</h1>
+
           <form id="contact-form">
-            <ul>
-              <li>
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-              </li>
-              <li>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-              </li>
-              <li>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required="required"></textarea>
-              </li>
-            </ul>
+            <div class="form-group">
+              <ul>
+                <li>
+                  <label for="name">Name</label>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="John Smith" required="required">
+                </li>
+                <li>
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="example@gmail.com" required="required">
+                </li>
+                <li>
+                  <label for="message">Message</label>
+                  <textarea id="message" name="message" required="required"></textarea>
+                </li>
+              </ul>
+            </div>
             <input type="submit">
           </form>
+
         </section>
+
       </div>
       <div class="col-lg-4 col-md-4 col-sm-12 col-sx-12">
         <section class="sidebar">
